--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -443,97 +443,7 @@
       </div>
       <div class="col-md-3" id="twt-timeline">
         <div class="indexNPrt2Rght">
-          <a class="twitter-timeline" data-width= "100%" data-height= "100%" data-theme="dark" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a>
-          <!--<div class="ylwTpBx clearfix">
-            <h3>Social Feeds<span><img src="../../../../assets/images/blkArow.png"></span></h3>
-            &lt;!&ndash; <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p> &ndash;&gt;
-          </div>
-
-          &lt;!&ndash; Nav tabs &ndash;&gt;
-          <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#nTwtr" aria-controls="nTwtr" role="tab"
-                                                      data-toggle="tab"><img
-              src="../../../../assets/images/twitter_icn.png" alt=""></a></li>
-            <li role="presentation"><a href="#nFb" aria-controls="nFb" role="tab" data-toggle="tab"><img
-              src="../../../../assets/images/facebook_icn.png" alt=""></a></li>
-            <li role="presentation"><a href="#nInsta" aria-controls="nInsta" role="tab" data-toggle="tab"><img
-              src="../../../../assets/images/insta_icn.png" alt=""></a></li>
-          </ul>
-
-          &lt;!&ndash; Tab panes &ndash;&gt;
-          <div class="tab-content">
-            <div role="tabpanel" class="tab-pane active" id="nTwtr">
-              <div class="nSocialTbWrap">
-                <div class="nSocialTbBx" *ngFor="let tweet of twitterFeeds">
-                  <img
-                    [attr.src]="tweet?.user?.profile_banner_url ? tweet?.user?.profile_banner_url : '../../../../assets/images/twitter-befault.jpg'"
-                    alt="" class="img-responsive social-feed-img"/>
-                  <div class="nSocialTbBxInfo">
-                    <div class="nSocialTbBxInfoTp clearfix">
-                      <a href="https://twitter.com/{{tweet?.user?.screen_name}}" target="_blank"><span
-                        class="icnWrapperS">{{tweet?.user.name}}</span><i><img
-                        src="../../../../assets/images/twitter_icn.png"></i></a>
-                      <div class="nltstNwsInfoTme">
-                        <span class="icnWrapperS"><img src="../../../../assets/images/nclck_icn.png" alt=""
-                                                       class="img-responsive"></span>
-                        <i>{{tweet.created_at |date:'dd MMM, yyyy h:m a'}}</i>
-                      </div>
-                    </div>
-                    <p>{{tweet?.text?.slice(0,150)}}...</p>
-                    <a href="{{tweet?.entities?.urls[0]?.url}}" target="_blank" class="nRdMor">Read More <span><img
-                      src="../../../../assets/images/blkArow.png"></span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div role="tabpanel" class="tab-pane" id="nFb">
-              <div class="nSocialTbWrap">
-                <div class="nSocialTbBx" *ngFor="let tweet of facebookFeeds">
-                  <img
-                    [attr.src]="tweet?.attachments?.data[0]?.media?.image?.src ? tweet?.attachments?.data[0]?.media?.image?.src :'../../../../assets/images/f-default.jpg'"
-                    alt="" class="img-responsive social-feed-img"/>
-                  <div class="nSocialTbBxInfo">
-                    <div class="nSocialTbBxInfoTp clearfix">
-                      <a href="javascript:void(0)"><span class="icnWrapperS">{{tweet?.message}}</span><i><img
-                        src="../../../../assets/images/facebook_icn.png"></i></a>
-                      <div class="nltstNwsInfoTme">
-                        <span class="icnWrapperS"><img src="../../../../assets/images/nclck_icn.png" alt=""
-                                                       class="img-responsive"></span>
-                        <i>{{tweet.created_at |date:'dd MMM, yyyy h:m a'}}</i>
-                      </div>
-                    </div>
-                    <p>{{tweet?.text?.slice(0,150)}}...</p>
-                    <a href="{{tweet?.attachments?.data[0]?.url}}" target="_blank" class="nRdMor">Read More <span><img
-                      src="../../../../assets/images/blkArow.png"></span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div role="tabpanel" class="tab-pane" id="nInsta">
-              <div class="nSocialTbWrap">
-                <div class="nSocialTbBx" *ngFor="let tweet of instagramFeeds">
-                  <img
-                    [attr.src]="tweet?.images?.thumbnail?.url ? tweet?.images?.thumbnail?.url :'../../../../assets/images/f-default.jpg'"
-                    alt="" class="img-responsive social-feed-img"/>
-                  <div class="nSocialTbBxInfo">
-                    <div class="nSocialTbBxInfoTp clearfix">
-                      <a href="https://www.instagram.com/{{tweet?.user?.username}}" target="_blank"><span
-                        class="icnWrapperS">{{tweet?.user.full_name}}</span><i><img
-                        src="../../../../assets/images/insta_icn.png"></i></a>
-                      &lt;!&ndash;<div class="nltstNwsInfoTme">
-                        <span class="icnWrapperS"><img src="../../../../assets/images/nclck_icn.png" alt=""
-                                                       class="img-responsive"></span>
-                        <i>{{tweet.created_time |date:'dd MMM, yyyy h:m a'}}</i>
-                      </div>&ndash;&gt;
-                    </div>
-                    <p>{{tweet?.caption?.text?.slice(0,150)}}...</p>
-                    <a href="{{tweet?.link}}" class="nRdMor" target="_blank">Read More <span><img
-                      src="../../../../assets/images/blkArow.png"></span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>-->
+          <a class="twitter-timeline" data-width= "100%" data-height= "100%" data-theme="dark" data-chrome="nofooter" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a>
         </div>
       </div>
     </div>
