--- a/src/assets/newAdmin/sass/paper/_cards.scss
+++ b/src/assets/newAdmin/sass/paper/_cards.scss
@@ -32,8 +32,9 @@
         color: $font-color;
     }
 
-    h6{
-        font-size: $font-size-small;
+    .h6{
+        font-size: 14px;
+       font-weight: bolder;
         margin: 0;
     }
     .category,
