--- a/src/assets/newAdmin/sass/paper/_typography.scss
+++ b/src/assets/newAdmin/sass/paper/_typography.scss
@@ -32,8 +32,8 @@ h5, .h5 {
     margin-bottom: 15px;
 }
 h6, .h6{
-    font-size: $font-size-h6;
-    font-weight: $font-weight-bold;
+    font-size: 14px;
+    font-weight: $font-weight-bolder;
     text-transform: uppercase;
 }
 p{
