new front design

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -85,7 +85,7 @@
 <section class="indexNPrt2">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3" style="padding-left: 10px;">
+      <div class="col-xs-3" style="padding-left: 10px;">
         <div class="indexNPrt2Lft">
           <!--advertisement-->
           <!--<div class="ylwTpBxInfoWrap">
@@ -198,7 +198,7 @@
 
 
 
-      <div class="col-md-6" style="padding-left: 10px; padding-right: 10px">
+      <div class="col-xs-6" style="padding-left: 10px; padding-right: 10px">
 
         <div class="indexNPrt2Mid">
 
@@ -213,7 +213,7 @@
 
 
             <div class="row">
-           <div class="col-md-6">
+           <div class="col-xs-6">
              <div class="sport-article sport-article-featured">
                  <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of featured | slice:0:1;let i = index;">
 
@@ -244,7 +244,7 @@
                  </div>
              </div>
            </div>
-           <div class="col-md-6">
+           <div class="col-xs-6">
              <div class="sport-article sport-article-featured">
                  <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of featured | slice:1:2;let i = index;">
                    <div class="sport-content" style="position: relative;">
@@ -260,7 +260,7 @@
          </div>
 
          <div class="row">
-           <div class="col-md-6 ">
+           <div class="col-xs-6 ">
              <div class="sport-article sport-article-featured">
                  <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of featured | slice:2:3;let i = index;">
                    <div class="sport-content" style="position: relative;">
@@ -274,7 +274,7 @@
                  </div>
                </div>
              </div>
-           <div class="col-md-6">
+           <div class="col-xs-6">
              <div class="sport-article sport-article-featured">
                  <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of featured | slice:3:4;let i = index;">
                    <div class="sport-content" style="position: relative;">
@@ -302,7 +302,7 @@
     <!-- <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p>
   </div> -->
           <div class="row no-gutters">
-            <div class="col-md-6">
+            <div class="col-xs-6">
               <div class="sport-article1">
 
                 <div class="sport-name1">
@@ -325,7 +325,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-xs-6">
               <div class="sport-article1">
                 <div class="sport-name1">
                   <div class="name">NFL Articles</div>
@@ -349,7 +349,7 @@
             </div>
           </div>
           <div class="row no-gutters">
-            <div class="col-md-6">
+            <div class="col-xs-6">
               <div class="sport-article1">
                 <div class="sport-name1">
                   <div class="name">NBA Articles</div>
@@ -371,7 +371,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-xs-6">
               <div class="sport-article1">
                 <div class="sport-name1">
                   <div class="name">NHL Articles</div>
@@ -395,7 +395,7 @@
             </div>
           </div>
           <div class="row no-gutters">
-            <div class="col-md-6">
+            <div class="col-xs-6">
               <div class="sport-article1">
                 <div class="sport-name1">
                   <div class="name">MMA Articles</div>
@@ -417,7 +417,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-xs-6">
               <div class="sport-article1">
                 <div class="sport-name1">
                   <div class="name">Nascar Articles</div>
@@ -441,7 +441,7 @@
             </div>
           </div>
           <div class="row no-gutters">
-            <div class="col-md-6">
+            <div class="col-xs-6">
               <div class="sport-article1">
                 <div class="sport-name1">
                   <div class="name">Soccer Articles</div>
@@ -463,7 +463,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-xs-6">
               <div class="sport-article1">
                 <div class="sport-name1">
                   <div class="name">PGA Articles</div>
@@ -550,7 +550,7 @@
 
         </div>
       </div>
-      <div class="col-md-3" style="padding-right: 10px" id="twt-timeline">
+      <div class="col-xs-3" style="padding-right: 10px" id="twt-timeline">
         <div class="indexNPrt2Rght">
           <a class="twitter-timeline" data-width= "100%" data-height= "100%" data-theme="dark" data-chrome="nofooter" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a>
         </div>
