--- a/src/app/front/components/home/front-home.component.css
+++ b/src/app/front/components/home/front-home.component.css
@@ -113,6 +113,7 @@
   padding: 0px;
   border-bottom: 1px solid #dddddd;
   background-color: #f8c534;
+  text-align: center;
 }
 
 .sport-article .sport-name2 {
