--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -939,7 +939,17 @@ font-size: 15px;line-height: 23px;width: 100px;text-align: center;padding: 6px;}
 	.tpCntrl .carousel-control span{display: inline-block; vertical-align:middle;}
 
 	.indexNPrt2{background: whitesmoke;}
-	.ylwTpBx{background: #f8c534;padding: 25px 20px;margin-bottom: 20px;}
+	.ylwTpBx{background: #f8c534;
+    padding-top: 25px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 25px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    border-top: ridge;
+    border-bottom: ridge;
+    border-width: 5px;
+    border-color: slategray;}
 	.ylwTpBx h3{font-family: 'Roboto Condensed', sans-serif;font-weight: 700;color: rgba(0,0,0,0.8);float: left;margin: 0px;}
 	.ylwTpBx h3 span{display: inline-block;vertical-align: middle;}
 	.ylwTpBx p{float: right;padding: 3px 0px;display: inline-block;vertical-align: middle;}
