--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -85,7 +85,7 @@
 <section class="indexNPrt2">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3" style="padding-left: 10px;">
+      <div class="col-sm-4 col-md-3" style="padding-left: 10px; padding-right: 15px">
         <div class="indexNPrt2Lft">
           <!--advertisement-->
           <!--<div class="ylwTpBxInfoWrap">
@@ -198,15 +198,19 @@
 
 
 
-      <div class="col-md-6" style="padding-left: 10px; padding-right: 10px">
+      <div class="col-sm-4 col-md-6" style="padding-left: 10px; padding-right: 10px">
 
         <div class="indexNPrt2Mid">
 
 
 
-          <div class="ylwTpBx clearfix">
-            <h3>Featured Articles</h3>
-            <!-- <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p> -->
+          <div class="ylwTpBx clearfix" style="float:none;">
+            <h3 > Featured Articles</h3>
+              <img src="../../../../assets/images/RP_Logo.png" style= "max-height: max-content; max-width:50px; float: right"/>
+
+
+            <!-- <p><img src="../../../../assets/
+            cn3.png" alt="" class="img-responsive"></p> -->
           </div>
 
           <div class="featuredSection">
@@ -550,7 +554,7 @@
 
         </div>
       </div>
-      <div class="col-md-3" style="padding-right: 10px" id="twt-timeline">
+      <div class="col-sm-4 col-md-3" style="padding-right: 15px; padding-left: 10px;" id="twt-timeline">
         <div class="indexNPrt2Rght">
           <a class="twitter-timeline" data-width= "100%" data-height= "100%" data-theme="dark" data-chrome="nofooter" data-link-color="#FAB81E" href="https://twitter.com/RotoProsDFS?ref_src=twsrc%5Etfw">Tweets by RotoProsDFS</a>
         </div>
