new front design

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -265,20 +265,22 @@
          </div>
 
          <div class="row">
-           <div class="col-md-6 ">
+           <div class="col-md-6">
              <div class="sport-article sport-article-featured">
-                 <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of featured | slice:2:3;let i = index;">
-                   <div class="sport-content" style="position: relative;">
-                     <div class="sport-name2" style="position: absolute; width:100%; top: 90px;">
+               <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of featured | slice:2:3;let i = index;">
+                 <div class="sport-content" style="position: relative;">
+                   <div class="sport-name2" style="position: absolute; width:100%; top: 90px;">
                      <div class="name">{{article.title.rendered?.slice(0,45)}}{{article.title.rendered.length > 45 ? '...' : ''}}</div>
                    </div>
-                   </div>
+                   <div class="sport-content">
+                     <img [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'"
+                          alt="" class="img-responsive" style="min-height:150px; max-height:150px">
 
-                   <img [attr.src]="findMedia(article.featured_media) ? findMedia(article.featured_media) : '../../../../assets/images/base-ball.jpg'"
-                        alt="" class="img-responsive" style="min-height:150px;max-height:150px">
+                   </div>
                  </div>
                </div>
              </div>
+           </div>
            <div class="col-md-6">
              <div class="sport-article sport-article-featured">
                  <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of featured | slice:3:4;let i = index;">
