new front design

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -308,7 +308,7 @@
     <h3>Articles by Sport</h3>
     <!-- <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p>
   </div> -->
-          <div class="row no-gutters">
+          <div class="row">
             <div class="col-md-6">
               <div class="sport-article1">
 
@@ -355,7 +355,7 @@
               </div>
             </div>
           </div>
-          <div class="row no-gutters">
+          <div class="row">
             <div class="col-md-6">
               <div class="sport-article1">
                 <div class="sport-name1">
@@ -401,7 +401,7 @@
               </div>
             </div>
           </div>
-          <div class="row no-gutters">
+          <div class="row">
             <div class="col-md-6">
               <div class="sport-article1">
                 <div class="sport-name1">
@@ -447,7 +447,7 @@
               </div>
             </div>
           </div>
-          <div class="row no-gutters">
+          <div class="row">
             <div class="col-md-6">
               <div class="sport-article1">
                 <div class="sport-name1">
