--- a/src/app/front/components/home/front-home.component.css
+++ b/src/app/front/components/home/front-home.component.css
@@ -89,12 +89,13 @@
   background-color: #ffffff;
   color: #0f0f0f;
   margin-bottom: 15px;
-  min-height: 340px;
-  max-height: 340px;
+  min-height: 360px;
+  max-height: 360px;
   border-style: solid;
   border-width: 10px;
   border-color: whitesmoke;
   overflow: scroll;
+  padding: 5px;
 
 
 }
@@ -129,7 +130,7 @@
 
 }
 .sport-article .sport-content {
-  padding: 0px;
+  padding: 5px;
   overflow: hidden;
 }
 
@@ -148,6 +149,7 @@
   min-width: 100px;
   width: 100px;
   border: 1px solid #dddddd;
+  padding: 0px;
 }
 
 .article-with-thumb .article-img img {
@@ -158,7 +160,7 @@
 }
 
 .article-with-thumb .article-details {
-  padding: 0 5px;
+  padding: 5px 5px;
 }
 
 .article-with-thumb .article-details .article-title {
