--- a/src/app/front/components/home/front-home.component.css
+++ b/src/app/front/components/home/front-home.component.css
@@ -89,13 +89,9 @@
   background-color: #ffffff;
   color: #0f0f0f;
   margin-bottom: 15px;
-  min-height: 360px;
-  max-height: 360px;
-  border-style: solid;
-  border-width: 10px;
-  border-color: whitesmoke;
+  margin:10px;
   overflow: scroll;
-  padding: 5px;
+  padding: 0px;
 
 
 }
@@ -114,9 +110,10 @@
 .sport-article1 .sport-name1 {
   font-size: 18px;
   font-weight: 900;
-  padding: 0px;
+  padding: 10px;
   border-bottom: 1px solid #dddddd;
   background-color: #f8c534;
+  margin-bottom: 10px;
 
 }
 
@@ -129,8 +126,9 @@
   background-color: #f8c534;
 
 }
-.sport-article .sport-content {
-  padding: 0px;
+.sport-article1 .sport-content {
+  padding: 10px;
+  padding-top: 0px;
   overflow: hidden;
 }
 
